--- a/templates/block/block--content-grid.html.twig
+++ b/templates/block/block--content-grid.html.twig
@@ -3,9 +3,6 @@
  * @file Contains the template to display the Content Grid block.
  */
 #}
-
-{{ attach_library('boulder_base/ucb-content-grid') }}
-
 {% set classes = [
   'container',
   'block',
@@ -37,74 +34,83 @@
 {% endif %}
 {% set contentParagraphs = content['#block_content'].field_grid_layout_content %}
 
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-  content.field_bs_background_style|render|striptags|trim,
-  content.field_bs_content_font_scale|render|striptags|trim,
-  content.field_bs_icon_position|render|striptags|trim,
-  content.field_bs_heading_alignment|render|striptags|trim,
-  content.field_bs_title_font_scale|render|striptags|trim,
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-  <div{{ attributes.addClass(classes, blockStyles) }}>
-    {{ title_prefix }}
-    {% if label %}
-      <div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-    {% endif %}
-    {{ title_suffix }}
-    {# Overlay Grid Layout #}
-    {% if layoutSelection == '2' %}
-      <div class="row row-cols-lg-{{ columnCount }} row-cols-md-2 row-cols-1">
-        {% for key, item in contentParagraphs %}
+  {{ attach_library('boulder_base/ucb-content-grid') }}
+  {# Overlay Grid Layout #}
+  {% if layoutSelection == '2' %}
+    <div class="row row-cols-lg-{{ columnCount }} row-cols-md-2 row-cols-1">
+      {% for key, item in contentParagraphs %}
+        {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
+          {% set title = item.entity.field_grid_layout_content_title.value %}
+          {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
+          {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
+          {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
+          {% set containerTag = link ? 'a' : 'span' %}
+          <div class="col">
+            <div class="grid-column">
+              <div class="overlay-grid-image-container grid-fill">
+                {% if title %}
+                  <{{ containerTag }}{{ create_attribute({ href: link }) }}>
+                    <strong>{{ title }}</strong>
+                  </{{ containerTag }}>
+                {% endif %}
+                <{{ containerTag }}{{ create_attribute({ role: 'presentation', 'aria-hidden': 'true', href: link }) }}>
+                  <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
+                </{{ containerTag }}>
+              </div>
+              {% if item.entity.field_grid_layout_content_text|view %}
+                <div class="overlay-grid-text">
+                  {{ item.entity.field_grid_layout_content_text|view }}
+                </div>
+              {% endif %}
+            </div>
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
+  {# Offset Grid Layout #}
+  {% elseif layoutSelection == '3' %}
+    <div class="row row-cols-lg-2 row-cols-1">
+      {% for key, item in contentParagraphs %}
+        <div{{ create_attribute({ class: loop.index % 6 > 1 ? 'col-lg-3 col-md-6 col' : 'col' }) }}>
+          {% set title = item.entity.field_grid_layout_content_title.value %}
           {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
-            {% set title = item.entity.field_grid_layout_content_title.value %}
             {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
             {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-            {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
-            {% set containerTag = link ? 'a' : 'span' %}
-            <div class="col">
-              <div class="grid-column">
-                <div class="overlay-grid-image-container grid-fill">
-                  {% if title %}
-                    <{{ containerTag }}{{ create_attribute({ href: link }) }}>
-                      <strong>{{ title }}</strong>
-                    </{{ containerTag }}>
-                  {% endif %}
-                  <{{ containerTag }}{{ create_attribute({ role: 'presentation', 'aria-hidden': 'true', href: link }) }}>
-                    <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
-                  </{{ containerTag }}>
-                </div>
-                {% if item.entity.field_grid_layout_content_text|view %}
-                  <div class="overlay-grid-text">
-                    {{ item.entity.field_grid_layout_content_text|view }}
-                  </div>
-                {% endif %}
+          {% else %}
+            {% set imgUrl = null %}
+          {% endif %}
+          {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
+          {% set containerTag = link ? 'a' : 'span' %}
+          <div class="d-flex flex-column-reverse justify-content-end grid-column">
+            {% if title %}
+              <div class="grid-text-container">
+                <{{ containerTag }}{{ create_attribute({ href: link }) }}>
+                  <strong class="h3">{{ title }}</strong>
+                </{{ containerTag }}>
               </div>
+            {% endif %}
+            {% if imgUrl %}
+              <{{ containerTag }}{{ create_attribute({ role: 'presentation', 'aria-hidden': 'true', class: 'grid-image-container grid-fill', href: link }) }}>
+                <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
+              </{{ containerTag }}>
+            {% endif %}
+          </div>
+          {% if item.entity.field_grid_layout_content_text|view %}
+            <div class="grid-text-container">
+              {{ item.entity.field_grid_layout_content_text|view }}
             </div>
           {% endif %}
-        {% endfor %}
-      </div>
-    {# Offset Grid Layout #}
-    {% elseif layoutSelection == '3' %}
-      <div class="row row-cols-lg-2 row-cols-1">
-        {% for key, item in contentParagraphs %}
-          <div{{ create_attribute({ class: loop.index % 6 > 1 ? 'col-lg-3 col-md-6 col' : 'col' }) }}>
+        </div>
+      {% endfor %}
+    </div>
+  {# Column or Card Grid Layout #}
+  {% else %}
+    <div class="row row-cols-lg-{{ columnCount }} row-cols-md-2 row-cols-1">
+      {% for key, item in contentParagraphs %}
+        <div class="col">
+          <div{{ create_attribute({ class: layoutSelection == '1' ? 'grid-card' : 'grid-column' }) }}>
             {% set title = item.entity.field_grid_layout_content_title.value %}
             {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
               {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
@@ -114,7 +120,7 @@
             {% endif %}
             {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
             {% set containerTag = link ? 'a' : 'span' %}
-            <div class="d-flex flex-column-reverse justify-content-end grid-column">
+            <div class="d-flex flex-column-reverse justify-content-end">
               {% if title %}
                 <div class="grid-text-container">
                   <{{ containerTag }}{{ create_attribute({ href: link }) }}>
@@ -134,46 +140,8 @@
               </div>
             {% endif %}
           </div>
-        {% endfor %}
-      </div>
-    {# Column or Card Grid Layout #}
-    {% else %}
-      <div class="row row-cols-lg-{{ columnCount }} row-cols-md-2 row-cols-1">
-        {% for key, item in contentParagraphs %}
-          <div class="col">
-            <div{{ create_attribute({ class: layoutSelection == '1' ? 'grid-card' : 'grid-column' }) }}>
-              {% set title = item.entity.field_grid_layout_content_title.value %}
-              {% if item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri %}
-                {% set imgUrl = item.entity.field_grid_layout_content_image.entity.field_media_image.entity.fileuri|image_style(imgStyle) %}
-                {% set imgAlt = item.entity.field_grid_layout_content_image.entity.field_media_image.alt %}
-              {% else %}
-                {% set imgUrl = null %}
-              {% endif %}
-              {% set link = item.entity.field_grid_layout_content_link.0.url|render %}
-              {% set containerTag = link ? 'a' : 'span' %}
-              <div class="d-flex flex-column-reverse justify-content-end">
-                {% if title %}
-                  <div class="grid-text-container">
-                    <{{ containerTag }}{{ create_attribute({ href: link }) }}>
-                      <strong class="h3">{{ title }}</strong>
-                    </{{ containerTag }}>
-                  </div>
-                {% endif %}
-                {% if imgUrl %}
-                  <{{ containerTag }}{{ create_attribute({ role: 'presentation', 'aria-hidden': 'true', class: 'grid-image-container grid-fill', href: link }) }}>
-                    <img{{ create_attribute({ src: imgUrl, alt: imgAlt }) }}>
-                  </{{ containerTag }}>
-                {% endif %}
-              </div>
-              {% if item.entity.field_grid_layout_content_text|view %}
-                <div class="grid-text-container">
-                  {{ item.entity.field_grid_layout_content_text|view }}
-                </div>
-              {% endif %}
-            </div>
-          </div>
-        {% endfor %}
-      </div>
-    {% endif %}
-  </div>
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
 {% endblock content %}
