--- a/templates/block/block--expandable-content.html.twig
+++ b/templates/block/block--expandable-content.html.twig
@@ -1,12 +1,9 @@
 {#
 /**
- * @file
- * Implements the "Expandable Content" block type (accordion, horizontal/vertical tabs).
+ * @file Contains the template to display the Events Calender block (accordion,
+ * horizontal/vertical tabs).
  */
 #}
-
-{{ attach_library('boulder_base/ucb-expandable-content') }}
-
 {% set classes = [
   'container',
   'block',
@@ -21,90 +18,61 @@
 {% set layoutSelection = entity.field_expandable_content_type.value %}
 
 {% set accordianContent %}
-<div class="accordion accordion-flush" id="ucb-accordion{{ id }}">
-  {% for key, item in entity.field_expandable_content_copy %}
-    {% set itemExpanded = loop.first and (layoutSelection != 0 or entity.field_expandable_content_open.value) %}
-    <div class="accordion-item tab-content">
-      <div class="accordion-header" id="ucb-accordion{{ id }}-title{{ loop.index }}">
-        {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
-        {% set expandableHeaderID = item.entity.field_expandable_content_title|view %}
-        <a href="#{{ target }}" id="{{ item.entity.field_expandable_content_title.value|render|lower|replace({' ': "-"}) }}" class="accordion-button{{ not itemExpanded ? ' collapsed' }} expandableHeaders" role="button" data-bs-toggle="collapse" data-bs-target="#{{ target }}" aria-expanded="{{ itemExpanded ? 'true' : 'false' }}" aria-controls="{{ target }}">
-          {{ item.entity.field_expandable_content_title|view }}
-        </a>
-      </div>
-      <div id="ucb-accordion{{ id }}-content{{ loop.index }}" class="accordion-collapse collapse tab-pane fade{{ itemExpanded ? ' show active' }}" aria-labelledby="ucb-accordion{{ id }}-title{{ loop.index }}" data-bs-parent="#ucb-accordion{{ id }}">
-        <div class="accordion-body">
-          {{ item.entity.field_expandable_content_body|view }}
+  <div class="accordion accordion-flush" id="ucb-accordion{{ id }}">
+    {% for key, item in entity.field_expandable_content_copy %}
+      {% set itemExpanded = loop.first and (layoutSelection != 0 or entity.field_expandable_content_open.value) %}
+      <div class="accordion-item tab-content">
+        <div class="accordion-header" id="ucb-accordion{{ id }}-title{{ loop.index }}">
+          {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
+          {% set expandableHeaderID = item.entity.field_expandable_content_title|view %}
+          <a href="#{{ target }}" id="{{ item.entity.field_expandable_content_title.value|render|lower|replace({' ': "-"}) }}" class="accordion-button{{ not itemExpanded ? ' collapsed' }} expandableHeaders" role="button" data-bs-toggle="collapse" data-bs-target="#{{ target }}" aria-expanded="{{ itemExpanded ? 'true' : 'false' }}" aria-controls="{{ target }}">
+            {{ item.entity.field_expandable_content_title|view }}
+          </a>
+        </div>
+        <div id="ucb-accordion{{ id }}-content{{ loop.index }}" class="accordion-collapse collapse tab-pane fade{{ itemExpanded ? ' show active' }}" aria-labelledby="ucb-accordion{{ id }}-title{{ loop.index }}" data-bs-parent="#ucb-accordion{{ id }}">
+          <div class="accordion-body">
+            {{ item.entity.field_expandable_content_body|view }}
+          </div>
         </div>
       </div>
-    </div>
-  {% endfor %}
-</div>
+    {% endfor %}
+  </div>
 {% endset %}
 
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-	content.field_bs_background_style|render|striptags|trim,
-	content.field_bs_content_font_scale|render|striptags|trim,
-	content.field_bs_icon_position|render|striptags|trim,
-	content.field_bs_heading_alignment|render|striptags|trim,
-	content.field_bs_title_font_scale|render|striptags|trim,
-	''
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-  <div{{attributes.addClass(classes,blockStyles)}}>
-    {{ title_prefix }}
-    {% if label %}
-      <div class="block-title-outer">
-        <{{headingTag}}{{title_attributes}} class="block-title {{ headingStyle }}">
-          <span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-            {{ content.field_bs_icon }}
-          </span>
-          <span class="block-title-text">
-            {{ label }}
-          </span>
-        </{{headingTag}}>
-      </div>
-    {% endif %}
-    {{ title_suffix }}
-    {% if layoutSelection == 1 %}
-      <div class="horizontal-tab-accordion">
-        <ul class="nav nav-tabs justify-content-center" id="ucb-horizontal-tabs{{ id }}" role="tablist">
-          {% for key, item in entity.field_expandable_content_copy %}
-            {% set itemExpanded = loop.first %}
-            {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
-            <li class="nav-item" role="presentation">
-              <a href="#{{ target }}" id="{{ item.entity.field_expandable_content_title.value|render|lower|replace({' ': "-"}) }}" class="nav-link horizontal-tab-link{{ itemExpanded ? ' active' }} expandableHeaders" role="tab" data-bs-toggle="tab" data-bs-target="#{{ target }}" aria-controls="{{ target }}" aria-selected="{{ itemExpanded ? 'true' : 'false' }}">{{ item.entity.field_expandable_content_title|view }}</a>
-            </li>
-          {% endfor %}
-        </ul>
-        <div class="horizontal-tab-content ">
-          {{ accordianContent }}
-        </div>
-      </div>
-    {% elseif layoutSelection == 2 %}
-      <div class="vertical-tab-accordion d-flex align-items-stretch">
-        <div class="vertical-tabs nav flex-column nav-pills" id="ucb-vertical-tabs{{ id }}" role="tablist" aria-orientation="vertical">
-          {% for key, item in entity.field_expandable_content_copy %}
-            {% set itemExpanded = loop.first %}
-            {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
-            <a href="#{{ target }}" id="{{ item.entity.field_expandable_content_title.value|render|lower|replace({' ': "-"}) }}" class="nav-link vertical-tab-link{{ itemExpanded ? ' active' }} expandableHeaders" role="tab" data-bs-toggle="pill" data-bs-target="#{{ target }}" aria-controls="{{ target }}" aria-selected="{{ itemExpanded ? 'true' : 'false' }}">{{ item.entity.field_expandable_content_title|view }}</a>
-          {% endfor %}
-        </div>
-        <div class="vertical-tab-content ">
-          {{ accordianContent }}
-        </div>
-      </div>
-    {% else %}
-      <div class="accordian-content">
+  {{ attach_library('boulder_base/ucb-expandable-content') }}
+  {% if layoutSelection == 1 %}
+    <div class="horizontal-tab-accordion">
+      <ul class="nav nav-tabs justify-content-center" id="ucb-horizontal-tabs{{ id }}" role="tablist">
+        {% for key, item in entity.field_expandable_content_copy %}
+          {% set itemExpanded = loop.first %}
+          {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
+          <li class="nav-item" role="presentation">
+            <a href="#{{ target }}" id="{{ item.entity.field_expandable_content_title.value|render|lower|replace({' ': "-"}) }}" class="nav-link horizontal-tab-link{{ itemExpanded ? ' active' }} expandableHeaders" role="tab" data-bs-toggle="tab" data-bs-target="#{{ target }}" aria-controls="{{ target }}" aria-selected="{{ itemExpanded ? 'true' : 'false' }}">{{ item.entity.field_expandable_content_title|view }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+      <div class="horizontal-tab-content ">
         {{ accordianContent }}
       </div>
-    {% endif %}
-  </div>
+    </div>
+  {% elseif layoutSelection == 2 %}
+    <div class="vertical-tab-accordion d-flex align-items-stretch">
+      <div class="vertical-tabs nav flex-column nav-pills" id="ucb-vertical-tabs{{ id }}" role="tablist" aria-orientation="vertical">
+        {% for key, item in entity.field_expandable_content_copy %}
+          {% set itemExpanded = loop.first %}
+          {% set target = 'ucb-accordion' ~ id ~ '-content' ~ loop.index %}
+          <a href="#{{ target }}" id="{{ item.entity.field_expandable_content_title.value|render|lower|replace({' ': "-"}) }}" class="nav-link vertical-tab-link{{ itemExpanded ? ' active' }} expandableHeaders" role="tab" data-bs-toggle="pill" data-bs-target="#{{ target }}" aria-controls="{{ target }}" aria-selected="{{ itemExpanded ? 'true' : 'false' }}">{{ item.entity.field_expandable_content_title|view }}</a>
+        {% endfor %}
+      </div>
+      <div class="vertical-tab-content ">
+        {{ accordianContent }}
+      </div>
+    </div>
+  {% else %}
+    <div class="accordian-content">
+      {{ accordianContent }}
+    </div>
+  {% endif %}
 {% endblock content %}
