--- a/templates/block/block--slider.html.twig
+++ b/templates/block/block--slider.html.twig
@@ -3,9 +3,6 @@
  * @file Contains the template to display the Image Slider block.
  */
 #}
-
-{{ attach_library('boulder_base/ucb-slider') }}
-
 {% set classes = [
   'block',
   'block-' ~ configuration.provider|clean_class,
@@ -29,74 +26,46 @@
 
 {% set id = 'carousel-' ~ content['#block_content'].id() %}
 
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-  content.field_bs_background_style|render|striptags|trim,
-  content.field_bs_content_font_scale|render|striptags|trim,
-  content.field_bs_icon_position|render|striptags|trim,
-  content.field_bs_heading_alignment|render|striptags|trim,
-  content.field_bs_title_font_scale|render|striptags|trim
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-  <div{{ attributes.addClass(classes, blockStyles, size) }}>
-    {{ title_prefix }}
-    {% if label %}
-      <div class="block-title-outer">
-        <{{ headingTag }}{{ title_attributes.addClass('block-title', headingStyle) }}>
-          <span class="block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}">
-            {{ content.field_bs_icon }}
-          </span>
-          <span class="block-title-text">
-            {{ label }}
-          </span>
-        </{{ headingTag }}>
-      </div>
-    {% endif %}
-    {{ title_suffix }}
-    {# <h1> {{ dump(content['#block_content'].field_slider_slide.value) }} </h1> #}
-    <div id="{{ id }}" class="carousel slide" data-interval="false">
-      <div class="carousel-indicators">
-        {% for i in 1..content['#block_content'].field_slider_slide.value|length %}
-          <button{{ create_attribute({
-            type: 'button',
-            'data-bs-target': '#' ~ id,
-            'data-bs-slide-to': i - 1,
-            'aria-label': 'Slide ' ~ i
-          }).addClass(loop.first ? 'active') }}></button>
-        {% endfor %}
-      </div>
-      <div class="carousel-inner">
-        {# Don't render these fields #}
-        {{ content|without(
-          'field_slider_size',
-          'field_slider_text_style',
-          'field_bs_heading',
-          'field_bs_heading_style',
-          'field_bs_heading_alignment',
-          'field_bs_icon_size',
-          'field_bs_icon_position',
-          'field_bs_icon_color',
-          'field_bs_title_font_scale',
-          'field_slider_text_style',
-          'field_bs_content_font_scale',
-          'field_bs_background_style',
-          'field_bs_icon'
-        ) }}
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#{{ id }}" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#{{ id }}" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+  {{ attach_library('boulder_base/ucb-slider') }}
+  {# <h1> {{ dump(content['#block_content'].field_slider_slide.value) }} </h1> #}
+  <div id="{{ id }}" class="carousel slide" data-interval="false">
+    <div class="carousel-indicators">
+      {% for i in 1..content['#block_content'].field_slider_slide.value|length %}
+        <button{{ create_attribute({
+          type: 'button',
+          'data-bs-target': '#' ~ id,
+          'data-bs-slide-to': i - 1,
+          'aria-label': 'Slide ' ~ i
+        }).addClass(loop.first ? 'active') }}></button>
+      {% endfor %}
     </div>
+    <div class="carousel-inner">
+      {# Don't render these fields #}
+      {{ content|without(
+        'field_slider_size',
+        'field_slider_text_style',
+        'field_bs_heading',
+        'field_bs_heading_style',
+        'field_bs_heading_alignment',
+        'field_bs_icon_size',
+        'field_bs_icon_position',
+        'field_bs_icon_color',
+        'field_bs_title_font_scale',
+        'field_slider_text_style',
+        'field_bs_content_font_scale',
+        'field_bs_background_style',
+        'field_bs_icon'
+      ) }}
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#{{ id }}" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#{{ id }}" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 {% endblock %}
