--- a/templates/block/block--social-media-icons.html.twig
+++ b/templates/block/block--social-media-icons.html.twig
@@ -1,11 +1,8 @@
 {#
 /**
- * @file Contains the template to display the Social Media Icons block type.
+ * @file Contains the template to display the Social Media Icons block.
  */
 #}
-
-{{ attach_library('boulder_base/ucb-social-media-icons-block') }}
-
 {# layoutSelection gathers the orientation value from the orientation field, 
     0 -> Horizontal
     1 -> Vertical #}
@@ -42,37 +39,9 @@
   imageSize
 ] %}
 
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-  content.field_bs_background_style|render|striptags|trim,
-  content.field_bs_content_font_scale|render|striptags|trim,
-  content.field_bs_icon_position|render|striptags|trim,
-  content.field_bs_heading_alignment|render|striptags|trim,
-  content.field_bs_title_font_scale|render|striptags|trim
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-  <div{{ attributes.addClass(classes, blockStyles) }}>
-    {{ title_prefix }}
-    {% if label %}
-      <div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-    {% endif %}
-    {{ title_suffix }}
-    {{ content.field_social_media_links }}
-    {{ content.field_social_media_email_link }}
-  </div>
+  {{ attach_library('boulder_base/ucb-social-media-icons-block') }}
+  {{ content.field_social_media_links }}
+  {{ content.field_social_media_email_link }}
 {% endblock content %}
