--- a/templates/block/block--text-block.html.twig
+++ b/templates/block/block--text-block.html.twig
@@ -1,23 +1,15 @@
 {#
 /**
- * @file
- * Theme to implement the text block
- *
- * Created by Joshua Nicholson on 08/09/22
-*
+ * @file Contains the template to display the Text block.
+ */
 #}
-
-{{ attach_library('boulder_base/ucb-text-block') }}
-
-
 {% set classes = [
-	'container',
-	'block',
-	'block-' ~ configuration.provider|clean_class,
-	'block-' ~ plugin_id|clean_class,
-	bundle ? 'block--type-' ~ bundle|clean_class,
-	view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-	''
+  'container',
+  'block',
+  'block-' ~ configuration.provider|clean_class,
+  'block-' ~ plugin_id|clean_class,
+  bundle ? 'block--type-' ~ bundle|clean_class,
+  view_mode ? 'block--view-mode-' ~ view_mode|clean_class
 ] %}
 
 {% set blockContent = content['#block_content'] %}
@@ -27,46 +19,15 @@
 
 {# Alert Switch for Text Block Alert Block Style #}
 {% set isAlert = content.field_bs_text_block_alert|render|striptags|trim %}
-{% set blockBackground = '' %}
 
-{% if isAlert == 'True'%}
-    {% set blockBackground = "bs-background-alert"%}
-  {% else %}
-    {% set blockBackground = 	content.field_bs_background_style|render|striptags|trim %}
+{% if isAlert == 'True' %}
+  {% set block_styles = block_styles|merge({ 'background_style': 'bs-background-alert' }) %}
 {% endif %}
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-	blockBackground,
-	content.field_bs_content_font_scale|render|striptags|trim,
-	content.field_bs_icon_position|render|striptags|trim,
-	content.field_bs_heading_alignment|render|striptags|trim,
-	content.field_bs_title_font_scale|render|striptags|trim,
-	''
-] %}
 
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-	<div{{attributes.addClass(classes,blockStyles)}}>
-		{{ title_prefix }}
-		{% if label %}
-			<div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-		{% endif %}
-		{{ title_suffix }}
-		<div class="text-block-body block-content">
-			{{ content.field_text_block_body }}
-		</div>
-	</div>
+  {{ attach_library('boulder_base/ucb-text-block') }}
+  <div class="text-block-body block-content">
+    {{ content.field_text_block_body }}
+  </div>
 {% endblock %}
