--- a/templates/block/block--ucb-latest-issues-block.html.twig
+++ b/templates/block/block--ucb-latest-issues-block.html.twig
@@ -1,51 +1,25 @@
-{{ attach_library('boulder_base/ucb-latest-issue') }}
-
-{%
-  set classes = [
-    'block',
-    'container',
-    'block-' ~ configuration.provider|clean_class,
-    'block-' ~ plugin_id|clean_class,
-    bundle ? 'block--type-' ~ bundle|clean_class,
-    view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
-]
-%}
+{#
+/**
+ * @file Contains the template to display the Latest Issues block.
+ */
+#}
+{% set classes = [
+  'block',
+  'container',
+  'block-' ~ configuration.provider|clean_class,
+  'block-' ~ plugin_id|clean_class,
+  bundle ? 'block--type-' ~ bundle|clean_class,
+  view_mode ? 'block--view-mode-' ~ view_mode|clean_class,
+] %}
 
 {% set baseurlJSON = (url('<front>')|render|trim('/'))%}
 
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-	content.field_bs_background_style|render|striptags|trim,
-	content.field_bs_content_font_scale|render|striptags|trim,
-	content.field_bs_icon_position|render|striptags|trim,
-	content.field_bs_heading_alignment|render|striptags|trim,
-	content.field_bs_title_font_scale|render|striptags|trim,
-	''
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
-<div{{attributes.addClass(classes,blockStyles)}}>
-	{{ title_prefix }}
-	{% if label %}
-		<div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-	{% endif %}
-	{{ title_suffix }}
-	<latest-issue-block baseURL="{{baseurlJSON}}" siteName="{{ site_name|lower|replace({' ': '-', '_': '-'}) }}">
-		<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
-			<i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
-		</div>
-	</latest-issue-block>
-</div>
+{% extends '@boulder_base/block/styled-block.html.twig' %}
+{% block content %}
+  {{ attach_library('boulder_base/ucb-latest-issue') }}
+  <latest-issue-block baseURL="{{baseurlJSON}}" siteName="{{ site_name|lower|replace({ ' ': '-', '_': '-' }) }}">
+    <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+      <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
+    </div>
+  </latest-issue-block>
+{% endblock %}
