--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -3,9 +3,6 @@
  * @file Contains the template to display the Video Reveal block type.
  */
 #}
-
-{{ attach_library('boulder_base/ucb-video-reveal') }}
-
 {% set classes = [
   'ucb-video-reveal',
   'block',
@@ -20,57 +17,28 @@
   {% set videoURL = content['#block_content'].field_video_reveal_video.entity.field_media_oembed_video.value %}
 {% endif %}
 
-
-{# Block/Title/Icon Styles #}
-{% set blockStyles = [
-  content.field_bs_background_style|render|striptags|trim,
-  content.field_bs_content_font_scale|render|striptags|trim,
-  content.field_bs_icon_position|render|striptags|trim,
-  content.field_bs_heading_alignment|render|striptags|trim,
-  content.field_bs_title_font_scale|render|striptags|trim,
-] %}
-
-{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
-{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
-{% set headingTag = content.field_bs_heading|render|striptags|trim %}
-{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
-
+{% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
-  <div{{ attributes.addClass(classes, blockStyles) }}>
-    {{ title_prefix }}
-    {% if label %}
-      <div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
-					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-						{{ content.field_bs_icon }}
-					</span>
-					<span class="block-title-text">
-						{{ label }}
-					</span>
-				</{{ headingTag }}>
-			</div>
-    {% endif %}
-    {{ title_suffix }}
-    <div id="ucb-video-block-{{ blockId }}" class="ucb-video-text-div">
-        <div hidden class="ucb-video-reveal-close">
-          <button aria-label="Hide video" class="ucb-video-reveal-close-button">
-            <i class="fa-solid fa-circle-xmark ucb-video-reveal-close-button"></i>
-          </button>
-        </div>
-        <div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{ blockId }}">
-          <script type="text/javascript">
-            window.addEventListener('load', () => enableVideoReveal('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{ blockId }}'));
-          </script>
-        </div>
-        <div role="button" aria-label="Play video" class="ucb-video-reveal-controls">
-          <span class="ucb-video-reveal-icon">
-            <i class="fa-solid fa-circle-play"></i>
-          </span>
-          <span class="ucb-video-reveal-text">{{ content.field_video_reveal_text_overlay }}</span>
-        </div>
-        <div class="ucb-video-reveal-image">
-          {{ content.field_video_reveal_image }}
-        </div>
-    </div>
+  {{ attach_library('boulder_base/ucb-video-reveal') }}
+  <div id="ucb-video-block-{{ blockId }}" class="ucb-video-text-div">
+      <div hidden class="ucb-video-reveal-close">
+        <button aria-label="Hide video" class="ucb-video-reveal-close-button">
+          <i class="fa-solid fa-circle-xmark ucb-video-reveal-close-button"></i>
+        </button>
+      </div>
+      <div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{ blockId }}">
+        <script type="text/javascript">
+          window.addEventListener('load', () => enableVideoReveal('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{ blockId }}'));
+        </script>
+      </div>
+      <div role="button" aria-label="Play video" class="ucb-video-reveal-controls">
+        <span class="ucb-video-reveal-icon">
+          <i class="fa-solid fa-circle-play"></i>
+        </span>
+        <span class="ucb-video-reveal-text">{{ content.field_video_reveal_text_overlay }}</span>
+      </div>
+      <div class="ucb-video-reveal-image">
+        {{ content.field_video_reveal_image }}
+      </div>
   </div>
 {% endblock content %}
